<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yes Mam !!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_semester">SemesterActivity</string>
    <string name="semesterHeading">semester</string>
    <string name="startDate">start date</string>
    <string name="enterDate">enter here</string>
    <string name="endDate">end date</string>
    <string name="enableSaturday">enable classes on Saturday</string>
    <string name="enableSunday">enable classes on Sunday</string>
    <string name="addCourses">Add Courses</string>
    <string name="reset">Reset</string>
    <string name="selectHolidays">Select Holidays</string>
    <string name="planHolidays">Plan Your Holidays</string>
    <string name="reqAttendance">Req. Attendance %</string>
    <string name="title_activity_course_view">CourseView</string>
    <string name="desiredAttendance">Desired Attendance %</string>
    <string name="title_activity_holiday_list">HolidayList</string>
    <string name="menu_all">All</string>
    <string name="menu_planned">Planned</string>
    <string name="menu_add">Add</string>
    <string name="addHoliday">"Add a Holiday "</string>
    <string name="addHolidayHeading">Add a Holiday</string>
    <string name="holidayType">Holiday Type</string>
    <string name="typeInsti">Insti</string>
    <string name="typePlanned">Planned</string>
    <string name="holidayDesc">Description</string>
    <string name="holidayDate">Date</string>
    <string name="title_activity_add_holidays">AddHolidays</string>
    <string name="descHint">About</string>
    <string name="saveNewHoliday">Save New Holiday</string>
    <string name="deleteText">Long Press a Holiday To Delete!</string>
    <string name="title_activity_add_courses">AddCourses</string>
    <string name="addCourseText">Add a new Course</string>
    <string name="courseNameText">Course Name</string>
    <string name="courseCodeText">Course Code</string>
    <string name="courseVenueText">Course Venue</string>
    <string name="setScheduleText">Set Schedule</string>
    <string name="mondayCTVText">Monday</string>
    <string name="tuesdayCTVText">Tuesday</string>
    <string name="wednesdayCTVText">Wednesday</string>
    <string name="thursdayCTVText">Thursday</string>
    <string name="fridayCTVText">Friday</string>
    <string name="submitCourse">Submit Course</string>
    <string name="fillAllFields">Please enter all the fields</string>
    <string name="fillTimings">Please enter the course Timings</string>
    <string name="scheduleLabel">Schedule</string>
    <string name="desAttenLabel">Desired Attendance</string>
    <string name="minAttenLabel">Min. Attendance</string>
    <string name="monLabel">Mon</string>
    <string name="tueLabel">Tue</string>
    <string name="wedLabel">Wed</string>
    <string name="thuLabel">Thu</string>
    <string name="friLabel">Fri</string>
    <string name="na">N/A</string>
    <string name="finishText">Finish</string>
    <string name="prefPreviouslyStarted">com.sidak.yesmam.PREFERENCE_PREV_STARTED</string>
    <string name="numWorkingDays">com.sidak.yesmam.PREFERENCE_WORKING_DAYS</string>
    <string name="dateStart">com.sidak.yesmam.PREFERENCE_START_DATE</string>
    <string name="dateEnd">com.sidak.yesmam.PREFERENCE_END_DATE</string>
    <string name="semPrefs">Semester Pref</string>
    <string name="numMon">mon</string>
    <string name="numTue">tue</string>
    <string name="numWed">wed</string>
    <string name="numThu">thu</string>
    <string name="numFri">fri</string>
    <string name="defaultAttenVal">-- %</string>
    <string name="selectCourse">Please select some course.</string>
    <string name="title_activity_wday_template">WdayTemplateActivity</string>
    <string name="title_activity_main_activity_holiday">MainActivityHoliday</string>
    <string name="toLoadWday">loadWday</string>
    <string name="wday_prefs">wday_prefs</string>
    <string name="wday_isset">wda_set</string>
    <string name="last_date">last_date</string>
    <string name="title_activity_unmarked_class_list">UnmarkedClassListActivity</string>
    <string name="title_activity_past_wday">PastWdayActivity</string>
    <string name="selectUClass">Please select some class.</string>

</resources>
